

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.9)

PROJECT(HelloWorld)

SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/CMakeModules;${CMAKE_MODULE_PATH}")

SET(Qt_USEV5 FALSE)
OPTION(Qt_USEV5 "Use Qt5"  Qt_USEV5)

IF(Qt_USEV5 )
	SET(Qt_LIBV5 "C:/Qt/Qt5.0.1/5.0.1/msvc2010/lib")
	OPTION(Qt_LIBV5 "Use Qt5 lib path"  Qt_LIBV5)
	LINK_DIRECTORIES(${Qt_LIBV5})
	IF (WIN32) 
	SET(CMAKE_PREFIX_PATH "C:/Qt/Qt5.0.1/5.0.1/msvc2010")
	ELSE(WIN32) 
	SET(CMAKE_PREFIX_PATH "/usr/local/Qt-5.0.1")
	ENDIF(WIN32)
ELSE(Qt_USEV5)
	FIND_PACKAGE(Qt4)
	SET(Qt_LIBv4_DIR "C:/Qt/4.8.4/lib" cache "Use Qt4 lib path")
	INCLUDE(QtUtils)
	
ENDIF(Qt_USEV5 )


# Find includes in corresponding build directories
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
# Run moc automatically when needed.
SET(CMAKE_AUTOMOC ON)

ADD_SUBDIRECTORY(MDI)
ADD_SUBDIRECTORY(OSG)
#ADD_SUBDIRECTORY(hellogl_es2)