
# Find the QtWidgets library
# FIND_PACKAGE(Qt5Widgets)

# C++ Source File
FILE(GLOB PROJECT_SOURCE_FILES 
	src/*.cpp
	src/*.h
	mdi.rc)

# QRC Source file	
SET(PROJECT_QRC Resource.qrc)	
IF(Qt_USEV5 )
	QT5_ADD_RESOURCES(QRC_SOURCE_FILE ${PROJECT_QRC})
ELSE()
	QT4_ADD_RESOURCES(QRC_SOURCE_FILE ${PROJECT_QRC})
ENDIF()
	
# Executable
ADD_EXECUTABLE(MDI ${PROJECT_SOURCE_FILES} ${PROJECT_QRC} ${QRC_SOURCE_FILE})

IF(Qt_USEV5 )
	QT5_USE_MODULES(MDI Widgets)
ELSE()
	# Use the Widgets module from Qt 4.
	SET(QT4_LIBS Core Gui)
	FOREACH(LINKLIB ${QT4_LIBS}) 
		QT4_USE_MODULES(MDI ${LINKLIB})
	ENDFOREACH(LINKLIB)
ENDIF()